--- a/index.html
+++ b/index.html
@@ -1,87 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
     <!-- bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <title>PHero Tube</title>
-  </head>
-  <body class="container">
+</head>
+
+<body class="container">
     <!-- navigation bar -->
-    <nav class="d-flex justify-content-between align-items-center p-4">
-      <img src="./Logo.png" alt="" style="width: 9em" />
-      <button class="btn btn-secondary text-black fw-bold">Sort by view</button>
-      <a class="btn btn-danger fw-bold" href="./blog.html" target="_blank"
-        >Blog</a
-      >
+    <nav class="row  p-3">
+        <div class="col"><img src="./Logo.png" alt="" /></div>
+        <div class="col text-center"><button class="btn btn-secondary text-black fw-bold ">Sort by view</button></div>
+        <div class="col text-end"><a class="btn btn-danger fw-bold" href="./blog.html" target="_blank">Blog</a></div>
     </nav>
     <hr class="mt-0 mb-4" />
 
     <!-- category section -->
 
-    <section>
-      <input
-        type="radio"
-        class="btn-check"
-        name="btnradio"
-        id="btnradio1"
-        autocomplete="off"
-        checked
-      />
-      <label class="btn btn-outline-danger" for="btnradio1">All</label>
+    <section class="d-flex gap-3 justify-content-center" id="category">
+        <!-- <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked />
+        <label class="btn btn-outline-danger" for="btnradio1">All</label>
 
-      <input
-        type="radio"
-        class="btn-check"
-        name="btnradio"
-        id="btnradio2"
-        autocomplete="off"
-      />
-      <label class="btn btn-outline-danger" for="btnradio2">Music</label>
+        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" />
+        <label class="btn btn-outline-danger" for="btnradio2">Music</label>
 
-      <input
-        type="radio"
-        class="btn-check"
-        name="btnradio"
-        id="btnradio3"
-        autocomplete="off"
-      />
-      <label class="btn btn-outline-danger" for="btnradio3">Comedy</label>
+        <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off" />
+        <label class="btn btn-outline-danger" for="btnradio3">Comedy</label>
 
-      <input
-        type="radio"
-        class="btn-check"
-        name="btnradio"
-        id="btnradio4"
-        autocomplete="off"
-      />
-      <label class="btn btn-outline-danger" for="btnradio4">Drawing</label>
+        <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off" />
+        <label class="btn btn-outline-danger" for="btnradio4">Drawing</label> -->
 
-      <!-- <button>All</button>
+        <!-- <button>All</button>
       <button>Music</button>
       <button>Comedy</button>
       <button>Drawing</button> -->
     </section>
 
+    <!-- card section -->
+    <section class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4 mt-3" id="card-section">
+        
+        <!-- <div class="col">
+            <div class="card h-100 border-0">
+              <img src="https://i.ibb.co/L1b6xSq/shape.jpg" class="card-img-top rounded" alt="...">
+              <div class="card-body">
+                <div class="d-flex justify-content-between gap-3">
+                    <div class="w-25">
+                        <img src="https://i.ibb.co/D9wWRM6/olivia.jpg" alt="" class="w-100 rounded-circle">
+                    </div>
+                    <div>
+                        <h5 class="card-title fw-bold">Shape of You jndhd dfhdh gfg </h5>
+                        <p class="fw-semibold mb-0 text-secondary">Olivia Mitchell</p>
+                        <p class="fw-semibold text-secondary">100K views</p>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div> -->
 
+    </section>
 
+    <!-- no data section -->
+    <section id="empty-section" class="d-none" style="min-height: 70vh; display: flex; justify-content: center; align-items: center;">
+        <div class="d-flex justify-content-center align-items-center flex-column">
+            <img src="./Icon.png" alt="">
+            <h1 class="text-black mt-3">Opps!!! Sorry No Data Found</h1>
+        </div>
+    </section>
 
-
-
-    
     <!-- script js -->
     <script src="./script.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
