--- a/index.html
+++ b/index.html
@@ -13,54 +13,21 @@
 
 <body class="container">
     <!-- navigation bar -->
-    <nav class="row  p-3">
+    <nav class="row row-cols-1 row-cols-md-3 p-3">
         <div class="col"><img src="./Logo.png" alt="" /></div>
-        <div class="col text-center"><button class="btn btn-secondary text-black fw-bold ">Sort by view</button></div>
-        <div class="col text-end"><a class="btn btn-danger fw-bold" href="./blog.html" target="_blank">Blog</a></div>
+        <div class="col text-md-center my-2 my-md-0"><button onclick="sortByViews()" class="btn btn-secondary text-black fw-semibold ">Sort by view</button></div>
+        <div class="col text-md-end"><a class="btn btn-danger fw-bold" href="./blog.html" target="_self">Blog</a></div>
     </nav>
     <hr class="mt-0 mb-4" />
 
     <!-- category section -->
 
     <section class="d-flex gap-3 justify-content-center" id="category">
-        <!-- <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked />
-        <label class="btn btn-outline-danger" for="btnradio1">All</label>
 
-        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" />
-        <label class="btn btn-outline-danger" for="btnradio2">Music</label>
-
-        <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off" />
-        <label class="btn btn-outline-danger" for="btnradio3">Comedy</label>
-
-        <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off" />
-        <label class="btn btn-outline-danger" for="btnradio4">Drawing</label> -->
-
-        <!-- <button>All</button>
-      <button>Music</button>
-      <button>Comedy</button>
-      <button>Drawing</button> -->
     </section>
 
     <!-- card section -->
     <section class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4 mt-3" id="card-section">
-        
-        <!-- <div class="col">
-            <div class="card h-100 border-0">
-              <img src="https://i.ibb.co/L1b6xSq/shape.jpg" class="card-img-top rounded" alt="...">
-              <div class="card-body">
-                <div class="d-flex justify-content-between gap-3">
-                    <div class="w-25">
-                        <img src="https://i.ibb.co/D9wWRM6/olivia.jpg" alt="" class="w-100 rounded-circle">
-                    </div>
-                    <div>
-                        <h5 class="card-title fw-bold">Shape of You jndhd dfhdh gfg </h5>
-                        <p class="fw-semibold mb-0 text-secondary">Olivia Mitchell</p>
-                        <p class="fw-semibold text-secondary">100K views</p>
-                    </div>
-                </div>
-              </div>
-            </div>
-          </div> -->
 
     </section>
 
