fixed sort by views function

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- navigation bar -->
     <nav class="row row-cols-1 row-cols-md-3 p-3">
         <div class="col"><img src="./Logo.png" alt="" /></div>
-        <div class="col text-md-center my-2 my-md-0"><button onclick="sortByViews()" class="btn btn-secondary text-black fw-semibold ">Sort by view</button></div>
+        <div class="col text-md-center my-2 my-md-0"><button id="sortByViewsBtn" class="btn btn-secondary text-black fw-semibold ">Sort by view</button></div>
         <div class="col text-md-end"><a class="btn btn-danger fw-bold" href="./blog.html" target="_self">Blog</a></div>
     </nav>
     <hr class="mt-0 mb-4" />
